[package]
name = "miasma"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
clap = { version = "4.6.0", default-features = false, features = ["derive", "std"] }
tokio = { version="1.50.0", features=["full"] }
url = "2.5.8"

# Profile for the smallest possible binary size
[profile.tiny]
inherits = "release"
opt-level = "z"
lto = true
debug = false
strip = true
panic = "abort"
