[package]
name = "miasma"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-stream = "0.3.6"
axum = "0.8.8"
bytes = "1.11.1"
clap = { version = "4.6.0", features = ["derive"] }
futures = "0.3.32"
reqwest = { version = "0.13.2", features = ["gzip", "stream"] }
tokio = { version="1.50.0", features= ["full"] }
tower-http = { version = "0.6.8", features = ["compression-br", "compression-gzip"] }
url = "2.5.8"
uuid = { version = "1.22.0", features = ["v4"] }

# Profile for the smallest possible binary size
[profile.tiny]
codegen-units = 1
inherits = "release"
opt-level = "z"
lto = true
debug = false
strip = true
panic = "abort"
